ensure default-content-wrapper width aligned with rest of page on mobile and desktop

--- a/express/styles/styles.css
+++ b/express/styles/styles.css
@@ -1027,6 +1027,13 @@ main .long-form.grid-width-6-desktop.narrow .default-content-wrapper {
   margin: 0 auto; 
 } 
 
+@media (max-width: 600px) {
+  .long-form.narrow.section.section-wrapper {
+    max-width: 375px;
+    margin: 0 auto;
+  }
+}
+
 
 @media (min-width: 900px) {
   main .block .button-container.free-plan-container {
